--- a/public/views/admin/auctions_add.ejs
+++ b/public/views/admin/auctions_add.ejs
@@ -9,6 +9,8 @@
         <title>Gentelella Alela! | </title>
         <!-- Bootstrap -->
         <% include includes/css %>
+        <link href="<%= base+'/assets/admin/map.css'%>" rel="stylesheet">
+        <link href="<%= base+'/assets/admin/vendors/bootstrap-datetimepicker/src/sass/bootstrap-datetimepicker.scss'%>" rel="stylesheet/sass">
     </head>
     <body class="nav-md">
         <div class="container body">
@@ -48,7 +50,7 @@
                                 </div>
                                 <div class="x_content">
                                     <br>
-                                    <form id="demo-form2" data-parsley-validate="" class="form-horizontal form-label-left" novalidate="">
+                                    <form id="demo-form2" data-parsley-validate="" class="form-horizontal form-label-left" novalidate="" method="POST">
                                         <div class="form-group">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Title <span class="required">*</span>
                                             </label>
@@ -91,6 +93,13 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
+                                            <label class="control-label col-md-3 col-sm-3 col-xs-12">Location <span class="required">*</span>
+                                            </label>
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                <input class=" form-control col-md-7 col-xs-12" required="required" type="text" name="location" id="location">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
                                             <small>
                                                 <b>Note: </b>
                                                 <ul>
@@ -98,6 +107,42 @@
                                                     <li>A premium auction is available only for premium users. Non-premium auction will be available for all. Only premium users can participate on all auctions. Free users can participate in only free auctions</li>
                                                 </ul>
                                             </small>
+                                        </div>
+                                        <!-- <div class="form-group">
+                                            <div id="map"></div>
+                                        </div> -->
+                                        <div class="form-group">
+                                            <!-- <div class="pac-card" id="pac-card">
+                                                <div>
+                                                    <div id="title">
+                                                        Autocomplete search
+                                                    </div>
+                                                    <div id="type-selector" class="pac-controls">
+                                                        <input type="radio" name="type" id="changetype-all" checked="checked">
+                                                        <label for="changetype-all">All</label>
+                                                        <input type="radio" name="type" id="changetype-establishment">
+                                                        <label for="changetype-establishment">Establishments</label>
+                                                        <input type="radio" name="type" id="changetype-address">
+                                                        <label for="changetype-address">Addresses</label>
+                                                        <input type="radio" name="type" id="changetype-geocode">
+                                                        <label for="changetype-geocode">Geocodes</label>
+                                                    </div>
+                                                    <div id="strict-bounds-selector" class="pac-controls">
+                                                        <input type="checkbox" id="use-strict-bounds" value="">
+                                                        <label for="use-strict-bounds">Strict Bounds</label>
+                                                    </div>
+                                                </div>
+                                                <div id="pac-container">
+                                                    <input id="pac-input" type="text"
+                                                        placeholder="Enter a location">
+                                                </div>
+                                            </div> -->
+                                            <div id="map"></div>
+                                            <div id="infowindow-content">
+                                                <img src="" width="16" height="16" id="place-icon">
+                                                <span id="place-name"  class="title"></span><br>
+                                                <span id="place-address"></span>
+                                            </div>
                                         </div>
                                         <div class="ln_solid"></div>
                                         <div class="form-group">
@@ -127,5 +172,77 @@
         </div>
         <!-- jQuery -->
         <% include includes/scripts %>
+        <script src='<%= base+"/assets/admin/vendors/bootstrap-datetimepicker/src/js/bootstrap-datetimepicker.js"%>'></script>
+        <script async defer src='<%= "https://maps.googleapis.com/maps/api/js?key="+google_map_key+"&libraries=places&callback=initMap"%>' ></script>
+        <script type="text/javascript">
+            function initMap() {
+                var map = new google.maps.Map(document.getElementById('map'), {
+                    center: {
+                        lat: 19.0760,
+                        lng: 72.8777
+                    },
+                    zoom: 16
+                });
+                var input = document.getElementById('location');
+
+                var autocomplete = new google.maps.places.Autocomplete(input);
+
+                // Bind the map's bounds (viewport) property to the autocomplete object,
+                // so that the autocomplete requests use the current map bounds for the
+                // bounds option in the request.
+                autocomplete.bindTo('bounds', map);
+
+                var infowindow = new google.maps.InfoWindow();
+                var infowindowContent = document.getElementById('infowindow-content');
+                infowindow.setContent(infowindowContent);
+                var marker = new google.maps.Marker({
+                    map: map,
+                    anchorPoint: new google.maps.Point(0, -29)
+                });
+
+                autocomplete.addListener('place_changed', function () {
+                    infowindow.close();
+                    marker.setVisible(false);
+                    var place = autocomplete.getPlace();
+                    if (!place.geometry) {
+                        // User entered the name of a Place that was not suggested and
+                        // pressed the Enter key, or the Place Details request failed.
+                        window.alert("No details available for input: '" + place.name + "'");
+                        return;
+                    }
+
+                    // If the place has a geometry, then present it on a map.
+                    if (place.geometry.viewport) {
+                        map.fitBounds(place.geometry.viewport);
+                    } else {
+                        map.setCenter(place.geometry.location);
+                        map.setZoom(17); // Why 17? Because it looks good.
+                    }
+                    marker.setPosition(place.geometry.location);
+                    marker.setVisible(true);
+
+                    var address = '';
+                    if (place.address_components) {
+                        address = [
+                            (place.address_components[0] && place.address_components[0].short_name || ''),
+                            (place.address_components[1] && place.address_components[1].short_name || ''),
+                            (place.address_components[2] && place.address_components[2].short_name || '')
+                        ].join(' ');
+                    }
+
+                    infowindowContent.children['place-icon'].src = place.icon;
+                    infowindowContent.children['place-name'].textContent = place.name;
+                    infowindowContent.children['place-address'].textContent = address;
+                    infowindow.open(map, marker);
+                });
+            }
+
+            $(document).ready(function(){
+                $(".date-picker").datetimepicker({
+                    daysOfWeekDisabled: [0, 6],
+                    format: 'Y-MM-DD HH:mm'
+                });
+            });
+        </script>
     </body>
 </html>
