--- a/public/views/index.html
+++ b/public/views/index.html
@@ -60,7 +60,7 @@
                         <div class="carousel-caption">
                             <h3>The Biggest <span>Sale</span></h3>
                             <p>Special for today</p>
-                            <a class="hvr-outline-out button2" href="mens.html">Shop Now </a>
+                            <a class="hvr-outline-out button2" href="/products">Shop Now </a>
                         </div>
                     </div>
                 </div>
