--- a/public/views/admin/login.ejs
+++ b/public/views/admin/login.ejs
@@ -64,6 +64,12 @@
                                 <input type="password" name="password" class="form-control" placeholder="Password" required="" />
                             </div>
                             <div>
+                                <input type="text" name="firstname" class="form-control" placeholder="First Name" required="" />
+                            </div>
+                            <div>
+                                <input type="text" name="lastname" class="form-control" placeholder="Last Name" required="" />
+                            </div>
+                            <div>
                                 <button type="submit" class="btn btn-default submit">Register</button>
                             </div>
                             <div class="clearfix"></div>
