--- a/public/views/frontends/myproducts.html
+++ b/public/views/frontends/myproducts.html
@@ -1,8 +1,24 @@
 <div class="banner_bottom_agile_info">
-    <h3 class="wthree_text_info">My <span>Product</span></h3>
-    <div class="container">
+    <h3 class="wthree_text_info">My <span>Products</span></h3>
+    <!-- <div class="container">
         <div class=" row banner_bottom_agile_info_inner_w3ls">
             {{product|json}}
+        </div>
+    </div> -->
+    <div class="container">
+        <div class=" row banner_bottom_agile_info_inner_w3ls">
+            <div class="col-md-4 wthree_banner_bottom_grid_three_left1 grid" ng-repeat="product in myproducts">
+                <figure class="effect-roxy">
+                    <img src="{{product.images[0].path}}" alt=" " class="img-responsive" />
+                    <figcaption>
+                        <h3><span>{{product.title.substr(0,1)}}</span>{{product.title.substr(1)}}</h3>
+                        <h5><span>For {{product.price | currency: $ }}</span></h5>
+                        <p>By : {{product.owner.name}}<br>In : {{product.category.title}}</p>
+                        <br><a href="/product/{{product._id}}">View Product</p>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="clearfix"></div>
         </div>
     </div>
 </div>
