--- a/public/views/index.html
+++ b/public/views/index.html
@@ -51,6 +51,7 @@
                             <ul class="dropdown-menu agile_short_dropdown">
                                 <li><a href="/profile">My Profile</a></li>
                                 <li><a href="/myproducts">My Product</a></li>
+                                <li><a href="/addproduct">Add Product</a></li>
                                 <li><a href="#" ng-click="logout()">Logout</a></li>
                             </ul>
                         </li>
