--- a/public/views/index.html
+++ b/public/views/index.html
@@ -16,6 +16,7 @@
         <link href="assets/css/font-awesome.css" rel="stylesheet">
         <link href="assets/css/easy-responsive-tabs.css" rel='stylesheet' type='text/css'/>
         <link href="assets/css/custom.css" rel='stylesheet' type='text/css'/>
+        <link href="assets/css/addproduct.css" rel='stylesheet' type='text/css'/>
         <!-- //for bootstrap working -->
         <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
         <link href='//fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,900,900italic,700italic' rel='stylesheet' type='text/css'>
